remove next button and fix item button overlap issue

--- a/web/src/items/items.styl
+++ b/web/src/items/items.styl
@@ -79,18 +79,6 @@
     }
   }
 
-  .next {
-    bottom: 0;
-    buttonize-background(success-color);
-    @extend .icon-button;
-    position: absolute;
-    right: -(unit);
-
-    i {
-      font-size: 1.2em;
-    }
-  }
-
   .editing &,
   &.gu-mirror {
     .toggle-checked {
@@ -109,10 +97,6 @@
 
     .name {
       padding-left: .6em;
-    }
-
-    .next {
-      right: 0;
     }
   }
 
